# two_scara_ros2

./: CONCEPT_REVIEW.md  Description_and_Physics.md  Dual_SCARA_Final_Presentation.pptx  Dual_SCARA_Pro_Visual_Final.pptx  KINEMATICS_EXPLANATION.md  KINEMATICS_THESIS.md  OPTIMIZATION_REPORT.md  PRESENTATION_GUIDE.md  PRODUCTION_UPGRADE_REPORT.md  README.md  RESEARCH_PAPER_FULL.md  convert_md_html.py  direct_joint_control.py  keyboard_joint_control.py  launch_log.txt  live_kinematics_monitor.py  optimization_demo.py  presentation.html  replication_data.csv  report.tex  torque_control_sim.py
install/: local_setup.sh  setup.sh
log/: latest_build
project_assets/: ORGANIZATION_README.md
project_assets/data_and_logs/: output.txt  replication_data.csv
project_assets/documents/: README.md  (+6 more)
src/two_scara_collaboration/: CMakeLists.txt  setup.cfg  setup.py
src/two_scara_collaboration/config/: scara_left_controllers.yaml  scara_right_controllers.yaml  simulation_params.yaml  two_scara_controllers.yaml
src/two_scara_collaboration/launch/: gazebo.launch.py  initialize.launch.py
src/two_scara_collaboration/rviz/: scara_config.rviz
src/two_scara_collaboration/two_scara_collaboration/: __init__.py  automation_manager.py  block_publisher.py  block_spawner.py  collision_avoidance.py  conveyor_driver.py  gripper_action_server.py  kinematics.py  scara_left_motion_planner.py  scara_right_motion_planner.py  spawn_robots.py
src/two_scara_collaboration/urdf/: conveyor_belt.urdf.xacro  cylinder_block.urdf.xacro  scara_left.urdf.xacro  scara_right.urdf.xacro  world.urdf.xacro
(+48 files in other folders)
